--- a/app/views/surveys/_form.html.erb
+++ b/app/views/surveys/_form.html.erb
@@ -5,10 +5,7 @@
     <%= f.text_field :name %>
   </p>
 <%= f.fields_for :questions do |builder| %>
- <p>
-   <%= builder.label :content, "Questions" %><br />
-   <%= builder.text_area :content, :rows => 3 %>
-</P>
+  <%= render 'question_fields', :f => builder %>
 <% end %>
   <p><%= f.submit %></p>
 <% end %>
