--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -2,8 +2,21 @@
 
 <p>
   <strong>Name:</strong>
-  <%= @survey.name %>
+  <%=h @survey.name %>
 </p>
+
+<ol>
+<% for question in @survey.questions %>
+   <li>
+     <%=h question.content %>
+    <ul>
+    <% for answer in question.answers %>
+     <li><%=h answer.content %></li>
+<% end %>
+ </ul>
+</li>
+<% end %>
+</ol>
 
 <p>
   <%= link_to "Edit", edit_survey_path(@survey) %> |
